# serializer version: 1
# name: test_derain
  ImageModelDescriptor(
    architecture=KBNetArch(
      id='KBNet',
      name='KBNet',
    ),
    input_channels=3,
    bytes=118272400,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=16, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'L',
      '48dim',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_sidd
  ImageModelDescriptor(
    architecture=KBNetArch(
      id='KBNet',
      name='KBNet',
    ),
    input_channels=3,
    bytes=513613580,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'S',
      '64w',
      'lightweight',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
